Fixed overflow problem

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -10,7 +10,11 @@
     box-sizing: border-box;
 }
 
-body {
+html, body {
     margin: 0;
     padding: 0;
-}
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+  }
+  
