--- a/client/src/pages/HomePage/sections/Hero/Hero.scss
+++ b/client/src/pages/HomePage/sections/Hero/Hero.scss
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: 100%;
   padding: 0 1.5rem;
   box-shadow: $shadow-primary;
   background-color: $neutral-light-bg;
